--- a/resources/view/pages/testimonies.html
+++ b/resources/view/pages/testimonies.html
@@ -12,7 +12,7 @@
 <section id="id">
   <h3>Envie seu depoimento</h3>
 
-  <form action="" method="post">
+  <form method="post" action="?page=1">
     <div class="form-group">
       <label for="name">Nome</label>
       <input type="text" class="form-control" name="name" required>
