--- a/resources/view/admin/modules/testimonies/item.html
+++ b/resources/view/admin/modules/testimonies/item.html
@@ -3,5 +3,12 @@
   <td>{{name}}</td>
   <td>{{message}}</td>
   <td>{{date}}</td>
-  <td></td>
+  <td>
+    <a href="{{URL}}/admin/testimonies/{{id}}/edit">
+      <button type="button" class="btn btn-primary">Editar</button>
+    </a>
+    <a href="{{URL}}/admin/testimonies/{{id}}/delete">
+      <button type="button" class="btn btn-danger">Excluir</button>
+    </a>
+  </td>
 </tr>
