--- a/resources/view/admin/modules/testimonies/form.html
+++ b/resources/view/admin/modules/testimonies/form.html
@@ -5,14 +5,16 @@
   </a>
 <hr>
 
+{{status}}
+
 <form action="" method="post">
   <div class="form-group">
     <label>Nome</label>
-    <input type="text" name="name" class="form-control" required>
+    <input type="text" name="name" class="form-control" value="{{name}}" required>
   </div>
   <div class="form-group my-3">
     <label>Mensagem</label>
-    <textarea name="message" class="form-control" rows="5" required></textarea>
+    <textarea name="message" class="form-control" rows="5" required>{{message}}</textarea>
   </div>
 
   <div class="form-group">
