--- a/resources/view/admin/modules/users/form.html
+++ b/resources/view/admin/modules/users/form.html
@@ -10,7 +10,7 @@
 <form action="" method="post">
   <div class="form-group">
     <label>Nome</label>
-    <input type="text" name="name" class="form-control" value="{{client_name}}" required>
+    <input type="text" name="client_name" class="form-control" value="{{client_name}}" required>
   </div>
   
   <div class="form-group">
