--- a/resources/view/admin/modules/users/delete.html
+++ b/resources/view/admin/modules/users/delete.html
@@ -1,6 +1,6 @@
-<h1>Excluir depoimento</h1>
+<h1>Excluir usuário</h1>
 <hr>
-  <a href="{{URL}}/admin/testimonies">
+  <a href="{{URL}}/admin/users">
     <button type="button" class="btn btn-warning">Voltar</button>
   </a>
 <hr>
@@ -8,7 +8,7 @@
 
 <form action="" method="post">
   <div class="form-group">
-    Você deseja realmente excluir o depoimento de <b>{{name}}</b> com o texto: <b>"{{message}}"</b> ?
+    Você deseja realmente excluir o: <b>{{client_name}}</b> que possui o usuário: <b>{{username}}</b> ?
   </div>
 
   <div class="form-group mt-3">
